# video_agent

./: .gitignore  README.md  config.py  index.html  main.py  pyproject.toml  requirements.txt
docs/: 使用教程.md
knowledge_base/: __init__.py
models/: __init__.py
skills/: SKILL.md  __init__.py  user_memory.json
sop/: script_sop.md
tests/: conftest.py  test_config.py  test_knowledge_base.py  test_models.py  test_skills.py  test_step1_analyze.py  test_step2_3_create.py  test_step4_export.py
workflow/: __init__.py  step1_analyze.py  step2_3_create.py  step4_export.py
